created context to provide theme then sidebar refactoring has begun

--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -34,7 +34,7 @@
 
 .sidebar .sidebar-body .sidebar-body_active {
   font-family: IRANYekan-Bold;
-  background-color: #fff;
+  /* background-color: #fff; */
   padding: 0.5rem 0;
 }
 
