--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,12 +2,17 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh;
 }
 
 .App-dark {
   background-color: rgb(11, 4, 54) !important;
   color: #fff !important;
+}
+
+.App main {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
 }
 
 .App main .container {
