--- a/src/styles/team.css
+++ b/src/styles/team.css
@@ -10,6 +10,12 @@
   src: url("../../public/assets/font/IranYekan/webFont/IRANYekanWebMedium.woff");
 }
 
+@font-face {
+  font-family: IRANYekan-Regular;
+  src: url("../../public/assets/font/IranYekan/webFont/IRANYekanWebRegular.ttf");
+  src: url("../../public/assets/font/IranYekan/webFont/IRANYekanWebRegular.woff");
+}
+
 .Team {
   width: 100%;
   display: flex;
@@ -76,8 +82,8 @@
 
 .Team .AddTeam-Modal .title-profile .image-container figure {
   cursor: pointer;
-  width: 120px;
-  height: 120px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   overflow: hidden;
   object-fit: contain;
@@ -90,4 +96,126 @@
 
 .Team .AddTeam-Modal .title-profile .image-container #fileInput {
   display: none;
+}
+
+.Team .AddTeam-Modal div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 1.5rem;
+  width: 50%;
+}
+
+.Team .AddTeam-Modal div .modal-title {
+  border-bottom: 1px solid #bbb8b865;
+  width: 100%;
+  padding-bottom: 1rem;
+}
+
+.Team .AddTeam-Modal div h3 {
+  font-family: IRANYekan-Medium;
+}
+
+.Team .AddTeam-Modal div .title-profile {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.Team .AddTeam-Modal div .title-profile input[type="text"] {
+  border: none;
+  padding: 1rem 0 0.5rem 2rem;
+  text-align: right;
+  border-bottom: 1px solid #bbb8b865;
+  font-family: IRANYekan-Regular;
+  background-color: transparent;
+}
+
+.Team .AddTeam-Modal div .title-profile_dark input[type="text"] {
+  color: #fff !important;
+}
+
+.Team .AddTeam-Modal div .title-profile input[type="text"]:focus {
+  outline: none;
+}
+
+.Team .AddTeam-Modal div .add-operators {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border: 1px solid #bbb8b865;
+  border-radius: 8px;
+  padding: 1rem 0.5rem;
+}
+
+.Team .AddTeam-Modal div .add-operators input {
+  border: none;
+  width: 100%;
+  text-align: right;
+  font-family: IRANYekan-Regular;
+  background-color: transparent;
+}
+
+.Team .AddTeam-Modal div .add-operators_dark input {
+  color: #fff !important;
+}
+
+.Team .AddTeam-Modal div .add-operators input:focus {
+  outline: none;
+}
+
+.Team .AddTeam-Modal div .operators-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 1rem;
+  border: 1px solid #bbb8b865;
+  border-radius: 8px;
+  padding: 1rem 0.5rem;
+}
+
+.Team .AddTeam-Modal div .operators-list h4 {
+  width: 100%;
+  border-bottom: 1px solid #bbb8b865;
+  text-align: right;
+  padding-bottom: 0.5rem;
+  font-family: IRANYekan-Regular;
+}
+
+.Team .AddTeam-Modal div .operators-list div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 0.5rem !important;
+}
+
+.Team .AddTeam-Modal div .operators-list div h5 {
+  font-family: IRANYekan-Regular;
+}
+
+.Team .AddTeam-Modal div .Btn-container {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.Team .AddTeam-Modal div .Btn-container button {
+  border: none;
+  padding: 0.5rem 1rem;
+  font-family: IRANYekan-Regular;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.Team .AddTeam-Modal div .Btn-container button:nth-child(1) {
+  background-color: #8c2c7f;
+  color: #fff;
+}
+
+.Team .AddTeam-Modal div .Btn-container button:nth-child(2) {
+  background-color: transparent;
+  color: #7e7a7a;
+  border: 1px solid #7e7a7a33;
 }
