--- a/src/styles/team_card.css
+++ b/src/styles/team_card.css
@@ -47,6 +47,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  gap: 0.5rem;
 }
 
 .TeamCard .TeamCard_infos section h2 {
