--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,7 +7,7 @@
 .header {
   z-index: 10000;
   width: 100%;
-  background-color: #fafafa;
+  background-color: #f4f5f7;
   padding: 1rem 1.5rem 1rem 1.5rem;
   position: sticky;
   top: 0;
