--- a/src/styles/team_card.css
+++ b/src/styles/team_card.css
@@ -24,7 +24,7 @@
 
 .TeamCard {
   max-width: 400px;
-  background-color: #fafafa;
+  background-color: #f4f5f7;
   border-radius: 8px;
   padding: 1rem;
   display: flex;
