--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,7 +1,13 @@
+body[data-theme="dark"] {
+  background-color: rgb(11, 4, 54);
+  color: #ffffff;
+}
+
 .App {
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding-bottom: 2rem;
 }
 
 .App-dark {
